--- a/emilk/package.json
+++ b/emilk/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.1.9",
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^5.1.0",
     "formidable-serverless": "^1.1.1",
     "framer-motion": "^12.17.0",
